Add links on images.

--- a/index.html
+++ b/index.html
@@ -117,56 +117,72 @@
 
         <ol class="projects">
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/pompage.net.jpg" width="640" height="160" alt="">
+                <a href="http://www.pompage.net/about">
+                    <img class="illustration" src="img/jpg/pompage.net.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2004 ~ 2014: <a href="http://www.pompage.net/about">http://www.pompage.net/about</a> I didn’t design the website but I was maintaining it on my spare time, along with translating, proof‑reading and publishing. Being part of this team for 10 years has been awesome and set the path I am still following to this day.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/paris-web.fr.jpg" width="640" height="160" alt="">
+                <a href="https://paris-web.fr/">
+                    <img class="illustration" src="img/jpg/paris-web.fr.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2006 ~ 2009: As part of <a href="https://paris-web.fr/">Paris Web</a> team, I participated to the organization and integration of the related websites. The whole process was fun! Helping speakers before, during and after the event was one of the most rewarding experiences ever. It was also a nice introduction to working remotely, with people in France, New‑Caledonia and China.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/bodybag.me.jpg" width="640" height="160" alt="">
+                <a href="http://bodybag.me/">
+                    <img class="illustration" src="img/jpg/bodybag.me.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2009: <a href="http://bodybag.me/">http://bodybag.me/</a> is a website for two Dutch architects in Shanghai who started their fashion design company.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/flipmood.com.jpg" width="640" height="160" alt="">
+                <a href="https://web.archive.org/web/http://flipmood.com/">
+                    <img class="illustration" src="img/jpg/flipmood.com.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2010: <a href="https://web.archive.org/web/http://flipmood.com/">http://flipmood.com/</a> was a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/china-europa-forum.net.jpg" width="640" height="160" alt="">
+                <a href="http://china-europa-forum.net/">
+                    <img class="illustration" src="img/jpg/china-europa-forum.net.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2010: <a href="http://china-europa-forum.net/">http://china-europa-forum.net/</a> is an initiative to push for exchange and support between Europe and China, on a lot of different topics. I coded the frontend and CMS of the site at the time; the actual version saw some HTML content added by a third part which can break the layout.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/skyview.asia.jpg" width="640" height="160" alt="">
+                <a href="https://web.archive.org/web/http://skyview.asia/spip.php?article14">
+                    <img class="illustration" src="img/jpg/skyview.asia.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2011: <a href="https://web.archive.org/web/http://skyview.asia/spip.php?article14">http://www.skyview.asia/</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/poppen.de.jpg" width="640" height="160" alt="">
+                <a href="http://poppen.de/">
+                    <img class="illustration" src="img/jpg/poppen.de.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2010~2012: (<abbr title="Not Safe For Work">NSFW</abbr>) <a href="http://poppen.de/">http://poppen.de/</a> is part of what my previous company is doing. There’s more than 3 millions registered users which makes it a very interesting challenge as any change made has a real impact.
                 </p>
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/kaufmich.com.jpg" width="640" height="160" alt="">
+                <a href="http://kaufmich.com/">
+                    <img class="illustration" src="img/jpg/kaufmich.com.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2012~2014: (<abbr>NSFW</abbr>) On <a href="http://kaufmich.com/">http://kaufmich.com/</a>, my biggest challenge was to clean legacy code while adding more features to the website. Considering the amount of people and code added through the years, it was <i>quite some fun</i>!
                 </p>
@@ -185,7 +201,9 @@
             </li>
 
             <li class="projects__project">
-                <img class="illustration" src="img/jpg/juwai.com.jpg" width="640" height="160" alt="">
+                <a href="http://juwai.com/">
+                    <img class="illustration" src="img/jpg/juwai.com.jpg" width="640" height="160" alt="">
+                </a>
                 <p>
                     2015~2016: <a href="http://juwai.com/">http://juwai.com/</a> is the main website of a few, dedicated to Chinese buyers and real estate agents throughout the World.
                 </p>
