Remove comment for Minimap opacity.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 list-style: none;
                 border-left: solid 1px #ccc;
                 background: #fff;
-                /*opacity: 0.1;*/
+                opacity: 0.1;
                 transition: opacity .25s;
             }
 
