--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 list-style: none;
                 border-left: solid 1px #ccc;
                 background: #fff;
-                opacity: 0.1;
+                opacity: 0.2;
                 transition: opacity .25s;
             }
 
@@ -173,18 +173,8 @@
 
     <body class="bam">
         <p>
-            Hello,
+            Hello, I’m Fabien!
         </p>
-
-        <p>
-            I’m <strong>Fabien, frontend developer, former architect</strong>.
-        </p>
-
-        <p>
-            The latter gives me a better understanding at how interface and people can work, the former allows me to make these a reality.
-        </p>
-
-        <hr>
 
         <p>
             As a <em>Frontend developer</em>, I’ve always pushed for Web Standards, resource optimization and fluid designs. I continue now with Responsive Web Design and like to fiddle with SVG.
@@ -259,11 +249,11 @@
             <div class="projects__project">
                 <h3 class="projects__title">flipmood.com</h3>
 
-                <a href="https://web.archive.org/web/http://flipmood.com/">
+                <a href="http://archives.arkhi.org/projects/flipmood/">
                     <img class="illustration" src="img/jpg/flipmood.com.jpg" width="640" height="160" alt="">
                 </a>
                 <p>
-                    2010: <a href="https://web.archive.org/web/http://flipmood.com/">http://flipmood.com/</a> was a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
+                    2010: <a href="http://archives.arkhi.org/projects/flipmood/">http://flipmood.com/</a> <em>was</em> a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
                 </p>
             </div>
 
@@ -281,11 +271,11 @@
             <div class="projects__project">
                 <h3 class="projects__title">skyview.asia</h3>
 
-                <a href="https://web.archive.org/web/http://skyview.asia/spip.php?article14">
+                <a href="http://archives.arkhi.org/projects/sky-view/sample.html">
                     <img class="illustration" src="img/jpg/skyview.asia.jpg" width="640" height="160" alt="">
                 </a>
                 <p>
-                    2011: <a href="https://web.archive.org/web/http://skyview.asia/spip.php?article14">http://www.skyview.asia/</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
+                    2011: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">http://www.skyview.asia/</a> <em>was</em> a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
                 </p>
             </div>
 
@@ -330,10 +320,10 @@
                     <img class="illustration" src="img/jpg/juwai.com.jpg" width="640" height="160" alt="">
                 </a>
                 <p>
-                    2015~2016: <a href="http://juwai.com/">http://juwai.com/</a> is the main website of a few, dedicated to Chinese buyers and real estate agents throughout the World.
+                    2015~2016: <a href="http://juwai.com/">http://juwai.com/</a> is the main website of a few, dedicated to Chinese consumers and customers throughout the World.
                 </p>
                 <p>
-                    I mainly worked on the <em>administrative side of the application</em>. We’ve started the process for a <em>global redesign of <a href="http://www.juwai.com">www.juwai.com</a></em> on December 2015. This should bring us closer to today’s standards in term of interface and interaction.
+                    I worked on almost every frontend related project, from the <em>administrative side of applications</em>, to a <em>global redesign of <a href="http://www.juwai.com">www.juwai.com</a></em> that started in December 2015.
                 </p>
             </div>
         </div>
