Add all assets + Use minified JS.

--- a/index.html
+++ b/index.html
@@ -460,6 +460,6 @@
         <script src="http://code.jquery.com/jquery-2.2.2.min.js"
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
-        <script src="Minimap.js"></script>
+        <script src="Minimap.min.js"></script>
     </body>
 </html>
