Fine tune minimap styles.

--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
             .c-minimap__link:after {
                 padding: 0 .5em;
                 border-radius: 3px;
-                margin-top: -1em;
-                margin-right: 1em;
+                margin-top: -.75em;
+                margin-right: .5em;
                 font-size: .75em;
                 white-space: nowrap;
                 color: #fff;
@@ -301,9 +301,9 @@
             }
 
             .c-minimap__link:before {
-                border: solid .5em transparent;
+                border: solid .25em transparent;
                 border-left-color: #666;
-                margin-top: -.5em;
+                margin-top: -.25em;
                 content: '';
             }
 
