--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             </p>
         </section>
 
-        <script src="http://code.jquery.com/jquery-2.2.2.min.js"
+        <script src="//code.jquery.com/jquery-2.2.2.min.js"
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
         <script src="Minimap.js"></script>
