--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
                 background-image: url(img/screenshots/juwai.com.jpg);
             }
 
+            .illustration--wyartlab {
+                background-image: url(img/screenshots/wyartlab.org.jpg);
+            }
+
             .project__thumbnail {
                 display: block;
                 max-width: 100%;
@@ -633,6 +637,20 @@
                     </p>
                     <p>
                         I worked on almost every frontend related project, from the <em>administrative side of applications</em>, to a <em>global redesign of <a href="http://www.juwai.com">www.juwai.com</a></em> that started in December 2015.
+                    </p>
+                </div>
+            </div>
+
+            <div class="container projects__project">
+                <h3 class="project__title" id="wyartlab.org">wyartlab.org</h3>
+
+                <a class="project__illustration illustration--wyartlab" href="https://wyartlab.org/">
+                    <img class="project__thumbnail" src="img/thumbnails/wyartlab.org.png" width="960" height="240" alt="">
+                </a>
+
+                <div class="project__description">
+                    <p>
+                        2017: <a href="https://wyartlab.org/">wyartlab.org</a> is a collaboration with <a href="http://cargocollective.com/flagship">Flasghsip</a> in Shanghai for the graphic design. The research lab shows its members and (cool) researches.
                     </p>
                 </div>
             </div>
